@@ -461,9 +461,8 @@ around '_generate_file' => sub {
 
     if(($self->web_server eq 'apache') || ($self->web_server eq 'all')) {
         $_[2]->{webserver_config_link} .= '# Symlink to the apache config for the environment we`re in
-        if [ ! -e /etc/apache2/sites-available/$PACKAGE ]; then
-            ln /srv/$PACKAGE/config/apache/$PACKAGE.conf /etc/apache2/sites-available/$PACKAGE
-        fi
+        rm /etc/apache2/sites-available/$PACKAGE
+        ln /srv/$PACKAGE/config/apache/$PACKAGE.conf /etc/apache2/sites-available/$PACKAGE
 ';
         $_[2]->{webserver_restart} .= 'a2enmod proxy proxy_http rewrite
         a2ensite $PACKAGE
@@ -477,9 +476,8 @@ around '_generate_file' => sub {
     }
     if(($self->web_server eq 'nginx') || ($self->web_server eq 'all')) {
         $_[2]->{webserver_config_link} .= '# Symlink to the nginx config for the environment we`re in
-        if [ ! -h /etc/nginx/sites-available/$PACKAGE ]; then
-            ln -s /srv/$PACKAGE/config/nginx/$PACKAGE.conf /etc/nginx/sites-available/$PACKAGE
-        fi
+        rm /etc/nginx/sites-available/$PACKAGE
+        ln -s /srv/$PACKAGE/config/nginx/$PACKAGE.conf /etc/nginx/sites-available/$PACKAGE
 ';
         $_[2]->{webserver_restart} .= 'if which invoke-rc.d >/dev/null 2>&1; then
             invoke-rc.d nginx restart
